--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sentry-plugin",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch --allowSyntheticDefaultImports",
     "build": "tsc --allowSyntheticDefaultImports",
