--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sentry-plugin",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch --allowSyntheticDefaultImports",
     "build": "tsc --allowSyntheticDefaultImports",
+    "commit": "git-cz",
     "test": "jest"
   },
   "repository": {
@@ -17,10 +18,20 @@
   "bugs": {
     "url": "https://github.com/shzhw/sentry-plugin/issues"
   },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.5",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^1.0.1",
+    "commitizen": "^4.2.3",
+    "git-cz": "^4.7.6",
     "jest": "^23.4.2",
     "prettier": "^1.16.4",
     "ts-jest": "^23.0.1",
@@ -33,9 +44,6 @@
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "es6-promise-pool": "^2.5.0",
     "form-data": "^3.0.0",
     "got": "^11.8.1"
