--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsc --watch --allowSyntheticDefaultImports",
     "build": "tsc --allowSyntheticDefaultImports",
     "commit": "git-cz",
-    "test": "jest"
+    "test": "jest",
+    "pub": "sh release.sh"
   },
   "repository": {
     "type": "git",
